Moved files around

--- a/LaTeX_tutorial/05.tex
+++ b/LaTeX_tutorial/05.tex
@@ -6,7 +6,7 @@
 
 \begin{document}
 \begin{figure}
-   \includegraphics[width=\linewidth]{boat.jpeg}
+   \includegraphics[width=\linewidth]{resources/boat.jpeg}
    \caption{A boat.}
    \label{fig:boat1} % Invisible, but useful for refering to this pic later
 \end{figure}
