Added more stuff

--- a/NandToTetris/main.tex
+++ b/NandToTetris/main.tex
@@ -2,6 +2,9 @@
 
 \usepackage{amsmath}
 \usepackage{amssymb}
+\usepackage{tikz}
+\usepackage{circuitikz}
+\usepackage{listings}
 
 \title{Nand To Tetris}
 \author{Kunwar Shaanjeet Singh Grover}
