--- a/NandToTetris/unit1.tex
+++ b/NandToTetris/unit1.tex
@@ -173,4 +173,139 @@ then out=1 else out=0
 
 \section{Hardware Description Language}
 
+Here is a possible implementation of a XOR gate in HDL.
 
+\begin{lstlisting}
+    // Xor gate: out = (a And Not(b)) Or (Not(a) And b)
+
+    CHIP Xor {
+        IN a, b;
+        OUT out;
+
+        PARTS:
+        Not (in=a, out=nota);
+        Not (int=b, out=notb);
+        And (a=a, b=notb, out=aAndNotb);
+        And (a=nota, b=b, out=notaAndb);
+        Or (a=aAndNotb, b=notaAndb, out=out);
+    }
+\end{lstlisting}
+
+\subsection{Some comments on HDL}
+
+\begin{itemize}
+    \item HDL is a functional / declarative language
+    \item The order of HDL statements is insignificant
+    \item Before using a chip part, you must know its interface.
+        For example: 
+        \begin{lstlisting}
+            Not(in= ,out= ), And(a=, b= ,out= )
+        \end{lstlisting}
+    \item Connections like
+        \begin{lstlisting}
+        partName(a=a,...) partName(..., out=out)
+        \end{lstlisting}
+        are common
+\end{itemize}
+
+Common HDLs:
+
+\begin{itemize}
+    \item VHDL
+    \item Verilog
+    \item Many more HDLs
+\end{itemize}
+
+Out HDL:
+
+\begin{itemize}
+    \item Similar in spirit to other HDLs
+    \item Minimal and simple
+    \item Provides all you need for this course
+\end{itemize}
+
+\section{Multi-Bit Buses}
+
+Sometimes we manipulate "together" an array of bits.
+It is conceptually convenient to think about such a group of bits
+as a single entity, sometimes termed "bus".
+HDLs will usually provide some convenient notion for handling
+these buses.
+
+\subsection{Examples on buses in HDL}
+
+Here is and example of how buses work in HDL:
+
+\begin{lstlisting}
+    /*
+     * Adds three 16-bit values
+     */
+
+     CHIP Add3Way16 {
+         IN first[16], second[16], third[16];
+         OUT out[16];
+
+         PARTS:
+
+            Add16(a=first, b=second, out=temp);
+            Add16(a=temp, b=third, out=out);
+     }
+\end{lstlisting}
+
+Another example:
+
+\begin{lstlisting}
+    /*
+     *  ANDs together all 4 bits of the input
+     */
+
+     CHIP And4Way {
+         IN a[4];
+         OUT out;
+
+         PARTS:
+            AND(a=a[0], b=a[1], out=t01)
+            AND(a=t01, b=a[2], out=t012);
+            AND(a=t012, b=a[3], out=out);
+     }
+\end{lstlisting}
+
+An example with output as a bus:
+
+\begin{lstlisting}
+    /*
+     * Computes a bit-wise and of its two 4-bit
+     * input buses
+     */
+
+     CHIP And4 {
+         IN a[4], b[4];
+         OUT out[4];
+
+         PARTS:
+            AND(a=a[0], b=b[0], out=out[0]);
+            AND(a=a[1], b=b[1], out=out[1]);
+            AND(a=a[2], b=b[2], out=out[2]);
+            AND(a=a[3], b=b[3], out=out[3]);
+     }
+\end{lstlisting}
+
+\subsection{Sub-buses}
+
+Buses can be composed from (and broken into) sub-buses:
+
+\begin{lstlisting}
+    ...
+    IN lsb[8], msb[8], ...
+    ...
+    Add16(a[0..7]=lsb, a[8..15]=msb, b=..., out=...);
+    Add16(..., out[0..3]=t1m out[4..15]=t2);
+\end{lstlisting}
+
+Some syntactic choices of our HDL:
+
+\begin{itemize}
+    \item Overlaps of sub-buses are allowed on output buses of parts
+    \item Width of internal pins is deduced automatically
+    \item "false" and "true" may be used as buses of any width
+\end{itemize}
