More Nand To Tetris

--- a/NandToTetris/unit1.tex
+++ b/NandToTetris/unit1.tex
@@ -343,3 +343,40 @@ CHIP AndMuxOr {
     Mux (a=andOut, b=orOut, sel=sel, out=out);
 }
 \end{lstlisting}
+
+\subsection{Demultiplexor}
+
+\begin{lstlisting}
+    if (sel==0)
+        {a, b}={in, 0}
+    else
+        {a, b}={0, in}
+\end{lstlisting}
+
+Acts like "inverse" of a multiplexor
+
+\section{Prespectives}
+
+In this chapter we built a basic chipset of 15 chips and we will
+use these to build more advanced chips in later chapters.\\
+
+We use NAND gates in industry because NAND gates are cheap to make. But since we are looking at lower levels and then creating abstractions, lets see how a NAND gate is made.
+
+\begin{figure}[h!]
+    \begin{center}
+        \begin{circuitikz}
+            \draw (0, -2)
+            node[nmos] (nmosA) {}
+            (nmosA.G) to[short, -o] ++(0, 0) node[left] {$A$} (0, -4)
+            node[nmos] (nmosB) {}
+            (nmosB.G) to[short, -o] ++(0, 0) node[left] {$B$}
+            (nmosA.S) to (nmosB.D)
+            (nmosB.S) node[ground] {}
+            (nmosA.D) to (0, 0) node[vcc] {$V_{cc}$}
+            to[short, *-o] ++(1, 0) node[right] {out};
+        \end{circuitikz}
+        \caption{A NMOS Nand Gate}
+    \end{center}
+\end{figure}
+
+If A and B, both are ON, then the current goes from $V_{cc}$ to Ground, and thus $out = 0$ or it goes to out, implying $out = 1$.
