--- a/OSandNetworks/main.tex
+++ b/OSandNetworks/main.tex
@@ -10,7 +10,7 @@
 
 \title{\huge Operating Systems And Networks}
 \author{Kunwar Shaanjeet Singh Grover}
-\date{Alapan: Sir say he farmer}
+\date{}
 
 
 \setcounter{tocdepth}{1}
