Cleaned Nand2teteris and added unoit2

--- a/NandToTetris/main.tex
+++ b/NandToTetris/main.tex
@@ -7,6 +7,7 @@
 \usepackage{listings}
 \usepackage{graphicx}
 \usepackage{titling}
+\usepackage{hyperref}
 
 % set up \maketitle to accept a new item
 \predate{\begin{center}\placetitlepicture\large}
@@ -38,5 +39,6 @@
 
 \include{unit0}
 \include{unit1}
+\include{unit2}
 
 \end{document}
