--- a/DesignAndAnalysis2020/lec1.tex
+++ b/DesignAndAnalysis2020/lec1.tex
@@ -1,25 +1,46 @@
-\chapter{Lecture 1}
+\chapter{Introduction}
 
-\section{Introduction}
+The course in one line: Better and Better Solutions to Problem.\\
 
-Better and Better solutions to problems.
+But to understand this line, we need to define some terms in the
+line. 
 
 \subsection{What do we mean by "Problems"?}
 
-It is not easy to define what a problem is. For example, Find the 
-next real number to $1.5$. This problem is not well posed.\\
+Today, we'll try to appreciate what is so difficult
+about this question. Challenges: (We talk about sequential problems)
 
-There is a problem of how do you pose problems itself.
+\begin{itemize}
+    \item Is it a Computational Problem?
+    \item Is the problem well-posed?
+    \item The problem of "Posing a problem without solving it"
+    \item Infinite Ways of solving the same problem
+\end{itemize}
 
-Task for next class: Try to discover your own answers to
-"what's a problem" in Sequential Algorithms setting.
+Algorithms today dont only involve sequential problem. The 
+challenges posed for sequential problems and the one line defination
+also are same for quantum, concurrent algo.
 
 \subsection{What do we mean by "Solution"}
 
-A well defined sequence of steps that solve the problem is NOT a
-correct defination of a computational solution.
+Challenges: (Sequenctial problem)
 
-Task for next class: Try to discover your own solutions to "what's
-a solution" in Sequential Algorithms setting.
+\begin{itemize}
+    \item It it a Computational Solution?
+        A sequence of well defined steps which gives an answer
+        if NOT a solution.
+    \item Discrete vs Continous
+    \item Is the Solution Realistic
+    \item What problem is considered as solved by a solution
+\end{itemize}
 
 \subsection{How to COMPARE various solutions?}
+
+To answer this we have more challenges: (Sequential algorithms)
+
+\begin{itemize}
+    \item What is TIME?
+    \item What is SPACE?
+    \item Worst-case Analysis? Or-else
+    \item Asymptotic Analysis. But Why?
+\end{itemize}
