Even more stuff

--- a/DataAndApplications2020/lec1.tex
+++ b/DataAndApplications2020/lec1.tex
@@ -1,96 +1,76 @@
-\chapter{Lecture 1}
+\chapter{Databases and Database Users}
 
-\section{Course Details}
+\subsection{Introduction}
 
-Textbook: Elmasri\\
-
-Contents of Course:
-\begin{enumerate}
-\item Introduction/Database Concepts
-\item Data Modeling
-\item Relational Model
-\item Normalization
-\item Algebra/Calculas/SQL
-\end{enumerate}
-
-\subsection{Project}
-
-Database Design Project.\\
-
--- Four phases - Rotation
--- group of 3 members
-
-1 -- Requirements Analusis
-2 -- Conceptual Design
-3 -- Logical Design 
-4 -- Applications \& SQL
-
-\subsection{Motivation for the course}
-
-\begin{itemize}
-\item As a CS person, you are going to work with data and databases.
-\item Second Largest Software Sales is Database Systems
-Want a job? Do this course
-\item A lot more was said but i wasnt paying attention :( 
-    Overall a useful course.
-\end{itemize}
-
-\section{What are Database Systems?}
-
-Any piece of information that can be captured is data. \\
-
-There is birth of data and rarely a death of data.
-For example, you send a ping to another computer and ask "Are you alive?", the time and message is recorded. The time and message is data. The time is the birth of data.\\
-
-Data $\leftarrow$ Factual (undoubted) information that can be
-recorded and have implicit meaning. \\
-
-A database is a collection of related data. \\
-
-For example, what courses students of a batch are taking.
-This is related data. A database can be formed from this data and
-probably already exists in IIIT database.\\
-
-\subsection{What is a Database?}
+A \textbf{database} is a collection of related data. By
+\textbf{data}, we mean known facts that can be recorded and
+have implicit meaning. This is a very general defination.\\
 
 A database has the following implicit properties:
 
 \begin{itemize}
-\item A database represents some aspect of the real world. (Universe of Discourse)
-\item A database is a logically coherent (associated, related) collection of data with some inherent meaning.
-\item A database is designed, build, and populated with data for a specific purpose.
-\item It has an intended group of users and some preconceived (already thought of) applications in which these users are interested.
+    \item Database represent some aspect of the real world,
+        call its \textbf{Universe of Discourse (UoD)}.
+    \item Database is a lofically coherent collection of data
+        with some inherent meaning.
+    \item It has a specific purpose.
 \end{itemize}
 
-\subsection{Database System}
-A database system (DBMS) is a collection of programs that enables
-users to create and maintain a database.
+A \textbf{database management system (DBMS)} is a computerized
+system the enables users to create and maintain a database. The 
+DBMS facilitates the following jobs:
 
 \begin{itemize}
-\item Defining Databases -- involves specifying the data types,
-    structures, and contraints for the data to be stored in the
-    database.
-\item Constructing Databases -- sotring the data itself (populating)
-    on some storage medium that is controlled by the DBMS.
-\item Manipulating Databases -- quering the database to retrieve specific data, updating the databases to reflect changes to mini-world.
+    \item \textbf{Defining} a database involves specifying the
+        data types, structures and constraints of the data
+        to be stored in the database. The database definition 
+        or descriptive information is also
+        stored by the DBMS in the form of a database
+        catalog or dictionary; it is called
+        textbf{meta-data}.
+    \item \textbf{Constructing} the database is the process of
+        storing the data on some storage medium controlled by the
+        DBMS.
+    \item \textbf{Manupulating} a database includes
+        quering, updating, generating reports.
+    \item \textbf{Sharing} a database allows multiple users
+        to access it simultaneously.
 \end{itemize}
 
-\subsubsection{Simplified Database System}
+An \textbf{application program} accesses the database by sending
+queries or requests for data to DBMS.\\
 
-(Figure)
+A \textbf{query} typically causes some data to be retrieved.\\
 
-\subsection{Example of a Database}
+\textbf{Protection} includes \textit{system protection} against
+hardware or software malfunction and \textit{security protection}
+against unauthorized or malicious access.\\
 
-Consider a part of a University environment\\
+The DMBS must be able to \textbf{maintain} the database system by
+allowing the system to evolve as requirements change over time.\\
 
-We need data about:
-    STUDENTSs\\
-    COURSEs\\
-    SECTIONs (of COURSEs)\\
-    (academic) DEPARTMENTs\\
-    INSTRUCTORSs\\
+Together a database and DBMS software form a \textbf{database
+system}.
 
-The above data is related as follows:
-    SECTIONs are of specific COURSEs\\
-    STUDENTs take SECTIONs\\
-    COURSEs have prequistic COURSEs\\
+\begin{figure}[h!]
+    \begin{center}
+        \includegraphics[width=7cm]{fig1.png}
+        \caption{A simplified database system environment}
+    \end{center}
+\end{figure}
+
+\subsection{Characteristics of the Database Approach}
+
+\begin{itemize}
+    \item \textbf{Self-Describing Nature of a Database System}\\
+        A database system contains a complete defination of
+        the database structure and contraints. This defination
+        is stored in the DBMS catalog. The information stored
+        in the catalog is called \textbf{meta-data}, and it
+        describes the structure of primary database. Some systems
+        such as NOSQL systems, do not require meta-data as they
+        store \textbf{self-describing data} that includes the
+        data info and data in one structure.
+
+    \item
+\end{itemize}
