--- a/DataAndApplications2020/main.tex
+++ b/DataAndApplications2020/main.tex
@@ -7,13 +7,14 @@
 \usepackage{listings}
 \usepackage{graphicx}
 \usepackage{titling}
+\usepackage{float}
 
 \title{\huge Data And Applications}
 \author{Kunwar Shaanjeet Singh Grover}
 \date{}
 
 
-\setcounter{tocdepth}{1}
+\setcounter{tocdepth}{2}
 
 \begin{document}
 
