--- a/MCT/main.tex
+++ b/MCT/main.tex
@@ -8,6 +8,8 @@
 \usepackage{graphicx}
 \usepackage{titling}
 \usepackage{hyperref}
+\usepackage{algorithm}
+\usepackage{algorithmic}
 \newcommand{\R}{\ensuremath{\mathbb{R}}}
 \newcommand{\N}{\ensuremath{\mathbb{N}}}
 
@@ -26,6 +28,6 @@
 \pagenumbering{arabic}
 \tableofcontents
 
-\include{lec1}
+\include{ch1}
 
 \end{document}
