--- a/OSandNetworks2020/main.tex
+++ b/OSandNetworks2020/main.tex
@@ -8,12 +8,12 @@
 \usepackage{graphicx}
 \usepackage{titling}
 
-\title{\huge Operating Systems And Networks}
+\title{\huge Operating Systems and Networks}
 \author{Kunwar Shaanjeet Singh Grover}
 \date{}
 
 
-\setcounter{tocdepth}{1}
+\setcounter{tocdepth}{2}
 
 \begin{document}
 
